Fixed shape card not showing border

--- a/src/components/ShapeCard.module.css
+++ b/src/components/ShapeCard.module.css
@@ -15,8 +15,8 @@
   border: 1px #ab4eff;
 }
 .onHover {
-  width: 240px;
-  height: 240px;
+  width: 239px;
+  height: 239px;
   position: absolute;
   top: 0px;
   left: 0px;
